[package]
name = "armchair_enthusiasts"
version = "0.1.0"
authors = ["Urs Breu <dev@gleisdrei.ch>"]
edition = "2018"

[dependencies]
actix = "0.8.3"
actix-rt = "0.2.2"
actix-web = "1.0.0"
chrono = { version = "0.4.6", features = ["serde"] }
diesel = { version = "1.4.2", features = ["postgres", "uuidv07", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.6.1"
futures = "0.1.27"
log = "0.4.0"
r2d2 = "0.8.5"
serde = "1.0.92"
serde_derive = "1.0.92"
serde_json = "1.0.39"
uuid = { version = "0.7.4", features = ["serde", "v4"] }